--- a/_includes/contact-us-modal.html
+++ b/_includes/contact-us-modal.html
@@ -3,7 +3,7 @@
 
     <div class="modal__close"></div>
 
-    <h1 class="text-centered font-weight-light">
+    <h1 class="text-centered font-weight-light header">
       CONTACT US
     </h1>
 
