Decrease the font size of the nav modal on mobile (so that the links all remain on the same line)

--- a/_sass/nav-modal.scss
+++ b/_sass/nav-modal.scss
@@ -66,9 +66,11 @@
       &:hover {
         color: #888;
       }
-
       > span {
         @include expanding-hover;
+      }
+      @include mobile {
+        font-size: 0.95em;
       }
     }
   }
