--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -52,14 +52,14 @@
 
             <span
               id="show-more-filters"
-              class="subdued"
+              class="opacity-50"
             >
               OPTIONS
             </span>
 
             <span
               id="show-less-filters"
-              class="subdued"
+              class="opacity-50"
             >
               LESS OPTIONS
             </span>
@@ -90,7 +90,7 @@
 
             <input
               id="min-size"
-              class="listings__filter subdued"
+              class="listings__filter opacity-50"
               type="text"
               placeholder=" Min. Size"
             >
@@ -100,7 +100,7 @@
               class="listings__filter"
               type="text"
               placeholder=" Price"
-              class="subdued"
+              class="opacity-50"
             >
 
             <select
@@ -117,7 +117,7 @@
 
             </select>
 
-            <div>
+            <div class="mx-auto">
 
               <button
                 id="listing-clear-filters"
