--- a/_sass/contact-us-modal.scss
+++ b/_sass/contact-us-modal.scss
@@ -10,6 +10,11 @@
       }
     }
   }
+
+  .header {
+    margin-top: 1.3em;
+  }
+
   .form {
     margin: 20px 0 0.67em 0;
   }
@@ -22,6 +27,7 @@
     text-align: left;
     color: $primary-color;
   }
+
   .input {
     margin: 0 auto 18px auto;
     width: 100%;
@@ -33,6 +39,7 @@
     border-color: #efefef;
     background-color: #fcfcfc;
   }
+
   .submit {
     width: 100%;
     margin-top: 20px;
@@ -42,5 +49,60 @@
     color: $primary-color-darker-darker;
     border-color: $primary-color-darker-darker;
     border-style: solid;
+  }
+
+  .contact-form-status {
+    padding: 40px;
+    display: none;
+    text-align: center;
+  }
+
+  #form-submit-loader {
+    padding: 10px;
+    display: none;
+  }
+
+  .loader,
+  .loader:after {
+    border-radius: 50%;
+    width: 10em;
+    height: 10em;
+  }
+  .loader {
+    margin: 60px auto;
+    font-size: 3px;
+    position: relative;
+    text-indent: -9999em;
+    border-top: 1.1em solid #858585;
+    border-right: 1.1em solid #858585;
+    border-bottom: 1.1em solid #858585;
+    border-left: 1.1em solid #ffffff;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+  }
+
+  @-webkit-keyframes load8 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+
+  @keyframes load8 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
   }
 }
