--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -112,6 +112,7 @@
 
   .listings__button {
     background-color: $primary-color-darker;
+    min-width: 120px;
     color: white;
     border: none;
     cursor: pointer;
@@ -269,7 +270,7 @@
   input.listings-search::-webkit-input-placeholder {
     color: $listings-text;
     font-size: 1.1em;
-    font-family: $font-brand;
+    font-family: $font-montserrat;
     line-height: 110%;
     opacity: 0.7;
   }
