--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@
 @import "vendor/sanitize.scss";
 @import "variables.scss";
 @import "mixins.scss";
+@import "body.scss";
 @import "nav-modal.scss";
 @import "agent-card.scss";
 @import "agent-modal.scss";
@@ -15,48 +16,10 @@
 @import "services.scss";
 @import "services.scss";
 @import "home.scss";
-@import "index.scss";
 @import "listing.scss";
 @import "listings.scss";
 @import "about.scss";
 @import "experience.scss";
-
-.modal__close {
-  @include close-button;
-  position: absolute;
-  color: $primary-color;
-  cursor: pointer;
-  padding: 21px;
-}
-
-.rounded-red-button {
-  border-radius: 500px;
-  margin-top: 22px;
-  font-weight: 500;
-  font-size: 0.7em;
-  color: $primary-color-darker-darker;
-  border-color: $primary-color-darker-darker;
-  border-style: solid;
-  border-width: thin;
-  padding: 5px 20px;
-  text-transform: uppercase;
-  text-decoration: none;
-  cursor: pointer;
-  @include mobile {
-    font-size: 1em;
-  }
-}
-
-.pt-site-header {
-  padding-top: $pt-site-header;
-}
-
-.bullet-square {
-  display: inline-block;
-  padding: 5px;
-  margin-right: 4px;
-  background-color: $primary-color;
-}
 
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
