Move all home-page related functions / scripts into the dedicated `home.js`

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -21,6 +21,12 @@
         }
       });
     </script>
+    <script>
+      var gsMap = {
+        latitude: {{ site.data.contact.latitude }},
+        longitude: {{ site.data.contact.longitude }}
+      }
+    </script>
   </head>
   <body>
 
@@ -287,88 +293,5 @@
 
     {% include include-scripts.html %}
     <script type="text/javascript" src="/scripts/home.js"></script>
-    <script>
-      $(document).ready(function() {
-        $(".services-home-button").click(function(event) {
-          $('.body').removeClass('overflow-hidden');
-          window.history.pushState(null, null, '#services')
-          scrollToServices();
-        })
-
-        var logo = $("#header-logo");
-
-        $(".testimonial-text").each(function() {
-          var textLimit = 300
-          var text = $(this).text();
-          if (text.length > textLimit) {
-            var shortenedText = $(this).text().slice(0,textLimit);
-            shortenedText += " ..."
-            $(this).text(shortenedText);
-          }
-        });
-
-        switch(window.location.hash) {
-          case '#contact':
-            $('body').addClass('overflow-hidden');
-            $('.contact-us-modal').fadeIn();
-            $('.nav-modal').fadeOut();
-            break;
-          case '#services':
-            navActivateSection("active-section-services")
-            break
-        }
-
-        $(logo).addClass("prepareSlideUp");
-        $("#header-text").css("opacity", 0);
-        setTimeout(function () {
-          $("#header-logo").addClass("slideUp");
-        }, 50);
-        setTimeout(function () {
-          $("#header-text").css("opacity", 1);
-        }, 700);
-
-        window.sr = ScrollReveal();
-        sr.reveal(".home-intro-left");
-        sr.reveal(".home-intro-right");
-        sr.reveal(".services-header");
-        sr.reveal(".testimonial-slideshow");
-        sr.reveal(".services-text");
-        sr.reveal("#contact-us-home-section");
-      })
-      function initHomeMap() {
-        var uluru = {lat: 33.979449, lng: -118.413002};
-        var map = new google.maps.Map(document.getElementById('gmap-home-page'), {
-          zoom: 14,
-          scrollwheel: false,
-          disableDefaultUI: true,
-          center: { lat: {{ site.data.contact.latitude }}, lng: {{ site.data.contact.longitude }} }
-        });
-
-        var marker = new google.maps.Marker({
-          position: uluru,
-          map: map
-        });
-      }
-      function scrollToServices() {
-        $('body').removeClass('overflow-hidden');
-        $('.nav-modal').fadeOut();
-        navActivateSection("active-section-services")
-        window.scrollTo({
-          top: $('#services-content').offset().top,
-          left: 0,
-          behavior: 'smooth'
-        });
-      }
-
-      function navActivateSection(section) {
-        $("[id^=active-section-]").attr('id', section)
-      }
-    </script>
-    <!-- TODO replace API key -->
-    <script
-      async
-      defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhoAiw62lFQnHpIqeqYJVu1KfRkcitEN0&callback=initHomeMap"
-    ></script>
   </body>
 </html>
