- Only use one google maps api key (for js api and static api, which is used for the newsletter) - Include markers for the map on the home page + newsletter static map - Load + instantiate the google maps api within home.js (instead of a completely separate script tag

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -23,8 +23,9 @@
     </script>
     <script>
       var gsMap = {
-        latitude: {{ site.data.contact.latitude }},
-        longitude: {{ site.data.contact.longitude }}
+        latitude: "{{ site.data.contact.latitude }}",
+        longitude: "{{ site.data.contact.longitude }}",
+        apiKey: "{{ site.data.contact.googleMapsKey }}"
       }
     </script>
   </head>
