--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -535,7 +535,7 @@
                         style="padding-bottom: 1em;"
                       >
                         <img
-                          src="https://maps.googleapis.com/maps/api/staticmap?center={{page.latitude}}+{{page.longitude}}&zoom=13&scale=2&size=640x300&maptype=roadmap&format=png&visual_refresh=true&key={{site.data.contact.staticGMap}}"
+                          src="https://maps.googleapis.com/maps/api/staticmap?center={{page.latitude}}+{{page.longitude}}&markers={{page.latitude}}, {{page.longitude}}&zoom=13&scale=2&size=640x300&maptype=roadmap&format=png&visual_refresh=true&key={{site.data.contact.googleMapsKey}}"
                           style="width: 100%;"
                         />
                       </td>
