--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -211,7 +211,7 @@ $listing-padding: 30px;
       right: 10px;
     }
 
-    #about-google-map {
+    #listing-google-map {
       width: 100%;
       height: 647px;
     }
@@ -400,7 +400,7 @@ $listing-padding: 30px;
         }
       }
 
-      #about-google-map {
+      #listing-google-map {
         height: 378px;
       }
 
