--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -287,12 +287,18 @@
 
         </div>
 
-        {% include footer.html %}
       </div>
 
     </div>
 
+    {% include footer.html %}
+
     {% include include-scripts.html %}
-    <script type="text/javascript" src="/scripts/home.js"></script>
+
+    <script
+      type="text/javascript"
+      src="/scripts/home.js">
+    </script>
+
   </body>
 </html>
