Add anchor tag to the logo so that it links back to home (for some unknown reason, this was being done with js previously)

--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,9 +1,11 @@
 <div class="site-header">
 
-	<img
-		src="/images/logo.png"
-		class="logo-upper-left"
-	/>
+	<a href="/">
+		<img
+			src="/images/logo.png"
+			class="logo-upper-left"
+		/>
+	</a>
 
 	<div class="ham-menu"></div>
 
