- Remove js that had been included in the shared script.js file into page-specific scripts - Refactor / restyle the logic for showing / hiding the listings filters (and add some css transitions) - Home page: simplify the logic for slicking the services carousels, and only do so when needed

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -46,27 +46,20 @@
           <div class="submenu">
 
             <div
-              id="features-toggle"
-              class="plus-sign"
-            ></div>
-
-            <span
-              id="show-more-filters"
-              class="opacity-50"
+              id="filters-toggle"
+              class="filters-state filters-state--button"
             >
+              <div></div>
+            </div>
+
+            <span class="opacity-50">
               OPTIONS
             </span>
 
-            <span
-              id="show-less-filters"
-              class="opacity-50"
-            >
-              LESS OPTIONS
-            </span>
 
           </div>
 
-          <div class="listings filters">
+          <div class="filters filters-state filters-state--list">
 
             {% assign locations = site.listings |map: "address-line-2"| |uniq| %}
 
@@ -83,7 +76,9 @@
               <option value="n/a">Any Location</option>
 
               {% for location in locations %}
-                <option value="{{location}}">{{location}}</option>
+                <option value="{{location}}">
+                  {{location}}
+                </option>
               {% endfor %}
 
             </select>
@@ -320,28 +315,8 @@
 
     {% include include-scripts.html %}
 
-    <script type="text/javascript">
-      $(document).ready(function() {
-        var typeQuery = (location.search.match(new RegExp('type' + "=(.*?)($|\&)", "i")) || [])[1]
-
-        if (typeQuery) {
-          showFilters();
-          $("#type-filter").val(typeQuery);
-          listingsSearch();
-        }
-
-        window.sr = ScrollReveal();
-        sr.reveal(".listing-preview");
-
-      })
-      function showFilters() {
-        $('#show-more-filters').hide();
-        $('#show-less-filters').show();
-        $(".filters").show();
-        var toggleBtn = $("#features-toggle")
-
-        toggleBtn.removeClass("plus-sign")
-        toggleBtn.addClass("minus-sign")
-      }
+    <script
+      type="text/javascript"
+      src="/scripts/listings.js">
     </script>
   </body>
