--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -125,7 +125,10 @@
     {% include footer.html %}
 
     {% include include-scripts.html %}
-    <script type="text/javascript" src="/scripts/experience.js"></script>
+    <script
+      type="text/javascript"
+      src="/scripts/experience.js">
+    </script>
     <script type="text/javascript">
       $(document).ready(function() {
 
