--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -22,7 +22,7 @@
       });
     </script>
     <script>
-      var gsMap = {
+      var homeMapMeta = {
         latitude: "{{ site.data.contact.latitude }}",
         longitude: "{{ site.data.contact.longitude }}",
         apiKey: "{{ site.data.contact.googleMapsKey }}"
