--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     {% include header-links.html %}
     <script>
-      var listingMap = {
+      var listingMapMeta = {
         latitude: "{{ site.data.contact.latitude }}",
         longitude: "{{ site.data.contact.longitude }}",
         apiKey: "{{ site.data.contact.googleMapsKey }}"
