--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -57,10 +57,6 @@
     display: none;
   }
 
-  .listings {
-    padding-top: 42px;
-  }
-
   .filters-state {
     transition: all $filter-transition-duration;
   }
@@ -111,13 +107,13 @@
     &.open {
       max-height: 200px;
       box-shadow: 0px 0px 18px 6px #f2f2f2;
+      margin-top: 2em;
     }
   }
 
   .filters {
     justify-content: center;
     background-color: white;
-    margin-top: 42px;
     text-align: center;
     font-size: 0.7em;
     width: 70vw;
@@ -125,6 +121,13 @@
     > a {
       text-decoration: none;
     }
+    @include mobile {
+      width: 100%;
+    }
+  }
+
+  .listings {
+    padding: 2em 0;
   }
 
   .listings__filter {
@@ -356,8 +359,6 @@
 
     .listings {
       width: 100%;
-      margin-top: 18px;
-      margin-bottom: 22px;
     }
 
     .paginator {
