Fix / refactor property paginator.

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -26,7 +26,9 @@
 
       <div class="content">
 
-        <div class="header">
+        <div
+          class="header"
+        >
 
           <h4>
             {{page.header}}
@@ -289,14 +291,8 @@
             <div class="navigation-arrow-left navigation-arrows"></div>
           </div>
 
-          <div class="pages">
-            <a
-              id="1"
-              class="selected scroll-listings-top"
-            >
-              1
-            </a>
-          </div>
+          <!-- javascript will append pagination links to this div -->
+          <div class="pages"></div>
 
           <div
             id="listings-next"
