--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -26,9 +26,7 @@
 
       <div class="content">
 
-        <div
-          class="header"
-        >
+        <div class="header">
 
           <h4>
             {{page.header}}
