--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -36,7 +36,7 @@
           <a
             href="/experience"
             id="experience-default-link"
-            class="title state__link"
+            class="title state__link state"
           >
             {{page.text_title}}
           </a>
@@ -45,21 +45,21 @@
             <a
               href="/experience?service=tenant"
               id="tenant-service-link"
-              class="state__link state--tenant link"
+              class="state__link state--tenant link state"
             >
               TENANT<br /> REPRESENTATION
             </a>
             <a
               href="/experience?service=landlord"
               id="landlord-service-link"
-              class="state__link state--landlord link"
+              class="state__link state--landlord link state"
             >
               LANDLORD<br /> REPRESENTATION
             </a>
             <a
               href="/experience?service=investment"
               id="investment-service-link"
-              class="state__link state--investment link"
+              class="state__link state--investment link state"
             >
               INVESTMENT<br /> REPRESENTATION
             </a>
@@ -97,21 +97,21 @@
 
       <div class="slideshow">
 
-        <div class="state state--tenant">
+        <div class="state state--tenant examples">
           {% include service-example.html
             examples=site.examples_tenant
             multi-image=true
           %}
         </div>
 
-        <div class="state state--landlord">
+        <div class="state state--landlord examples">
           {% include service-example.html
             examples=site.examples_landlord
             multi-image=true
           %}
         </div>
 
-        <div class="state state--investment">
+        <div class="state state--investment examples">
           {% include service-example.html
             examples=site.examples_investment
             multi-image=true
