Cleanup some weird styling issues on the listings page.

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -36,27 +36,29 @@
             {{page.subheader}}
           </p>
 
-          <input
-            id="listings-text-search"
-            type="text"
-            placeholder="Search properties"
-            class="listings-search"
-          >
+          <div>
+            <div class="listings-search">
+              <input
+                id="listings-text-search"
+                type="text"
+                placeholder="Search properties"
+              >
 
-          <div class="submenu">
+              <div class="submenu">
 
-            <div
-              id="filters-toggle"
-              class="filters-state filters-state--button"
-            >
-              <div></div>
+                <div
+                  id="filters-toggle"
+                  class="filters-state filters-state--button"
+                >
+                  <div></div>
+                </div>
+
+                <span class="opacity-50">
+                  OPTIONS
+                </span>
+
+              </div>
             </div>
-
-            <span class="opacity-50">
-              OPTIONS
-            </span>
-
-
           </div>
 
           <div class="filters filters-state filters-state--list">
