--- a/_sass/body.scss
+++ b/_sass/body.scss
@@ -176,6 +176,10 @@ a {
   display: inline-block;
 }
 
+.relative {
+  display: relative;
+}
+
 .section-header {
   @include header;
   font-family: $font-montserrat;
@@ -189,6 +193,7 @@ a {
 
 .flexbox {
   display: flex;
+  display: -ms-flex;
   position: relative;
   flex-flow: row wrap;
   justify-content: center;
